# Lewzen-logic

./: .gitignore  CMakeLists.txt  Makefile  README  canvas.cpp  canvas.h  circle.cpp  circle.h  comp.cpp  comp.h  comp_factory.cpp  comp_factory.h  comp_module.cpp  comp_module.h  component.cpp  component.h  diamond.cpp  hexagon.cpp  hexagon.h  main.cpp  oval.cpp  parashape.cpp  rectangle.cpp  rectangle.h  register.cpp  register.h  test.cpp  test.h  triangle.cpp  triangle.h  utils.h  value.h  wasm.cpp  wasm.html  接口列表.md
comp/: Makefile  and.cpp  and.h  circle.cpp  circle.h  diamond.cpp  diamond.h  ellipse.cpp  ellipse.h  envelope.cpp  envelope.h  internal_storage.cpp  internal_storage.h  line.cpp  line.h  or.cpp  or.h  process.cpp  process.h  rectangle.cpp  rectangle_scriptable.cpp  rectangle_scriptable.h  rounded_rectangle.cpp  rounded_rectangle.h  star.cpp  star.h  triangle.cpp  triangle.h
comp_custom/: activities.cpp  actor.cpp  actor.h  and.cpp  and.h  annotation.cpp  annotation.h  arrowDown.cpp  arrowLeft.cpp  arrowRight.cpp  arrowUp.cpp  arrow_left.cpp  arrow_left.h  big_arrow_left.cpp  big_arrow_left.h  bind.cpp  callout.cpp  callout.h  card.cpp  card.h  chevron.cpp  circle.cpp  circle.h  class_name.cpp  class_name.h  classes.cpp  classes.h  collate.cpp  collate.h  corner.cpp  corner.h  cross.cpp  cross.h  cylinder.cpp  cylinder.h  data.cpp  data.h  data_storage.cpp  data_storage.h  database.cpp  (+94 more)
comp_module/: comp_abstract.cpp  comp_abstract.h  comp_basics.cpp  comp_basics.h  comp_flippable.cpp  comp_flippable.h  comp_rotatable.cpp  comp_rotatable.h  comp_scalable.cpp  comp_scalable.h  comp_stylized.cpp  comp_stylized.h  comp_writable.cpp  comp_writable.h  core_point.cpp  core_point.h
demo/: CMakeLists.txt  canvas.cpp  canvas.h  respons.cpp  respons.h  server.cpp  test.cpp  testsvg.html  value.h
demo/components/: circle.cpp  component.cpp  component.h  diamond.cpp  diamond.h  hexagon.cpp  line.cpp  line.h  oval.cpp  oval.h  parashape.cpp  parashape.h  rectangle.cpp  rectangle.h
release/lewzen-core/: core.h  geometry.h  svg_el.cpp  svg_el.h  svgi_el.cpp  svgi_el.h  utils.h
release/lewzen-core/geometry/: component_rotatable.cpp  component_rotatable.h  coordinate_system.cpp  coordinate_system.h  point.cpp  point.h  point_func.cpp  point_func.h
release/lewzen-core/svg_el/: svg_circle.cpp  svg_circle.h  svg_defs.cpp  svg_defs.h  svg_ellipse.cpp  svg_ellipse.h  svg_foreign_object.cpp  svg_foreign_object.h  svg_g.cpp  svg_g.h  svg_image.cpp  svg_image.h  svg_line.cpp  svg_line.h  svg_linear_gradient.cpp  svg_linear_gradient.h  svg_marker.cpp  svg_marker.h  svg_mask.cpp  svg_mask.h  svg_svg.h  (+19 more)
utils/: Makefile  kv_heap.hpp  uuid.cpp  uuid.h
(+83 files in other folders)
